# openShake

./: .gitattributes  README.md
client/: CircularList.java  Comm.java  Data.java  FileFormat.java  Filter.java  FilterAdaptive.java  FilterNone.java  FilterOffset.java  Listener.java  LogFileWriter.java  Logger.java  Main.java  OffsetFilter.java  OutputCSV.java  README.md  Sample.java  Updater.java
client/gui/: Chart.java  Graph.java  GraphDerivative.java  SampleListUpdater.java  Window.java
csv2wav/: README.md  csv2wav.py
detector/: README.md
detector/async/: multi.c
detector/sync/: CMakeLists.txt  asmFunctions.S  edgeDetector.pio  edgeDetector_ccd.pio  multi.c
optics/: CornerHolderHole.stl  HHolder.stl  README.md  bigLensHolder.stl  boardCornerHolder.stl  boardCornerHolder2.stl  diffGratHolder.scad  diffGratHolder.stl  laserHolder.scad  laserHolder.stl  lensHolder.scad  lensHolder.stl  lineLaserHolder.stl  sensorBoardHolder.stl
pio/: CMakeLists.txt  edgeDetector.pio  edgeDetector_sh.pio  multi.c
tests/: .~lock.VEGOVA_hg_4.csv#
toshiba_clock/: CGG.py  README.md  toshiba_clock.S  toshiba_clock.ino
